methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:4: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime8.MethodsPicture'
override def run() {
             ^